--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <version>1.2.17</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -106,6 +113,13 @@
             <artifactId>commons-email</artifactId>
             <version>1.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.flink</groupId>
@@ -118,16 +132,6 @@
             <artifactId>kafka-clients</artifactId>
             <version>2.0.1</version>
         </dependency>
-
-        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-table -->
-        <dependency>
-            <groupId>org.apache.flink</groupId>
-            <artifactId>flink-table</artifactId>
-            <version>1.8.0</version>
-            <type>pom</type>
-            <scope>provided</scope>
-        </dependency>
-
 
         <dependency>
             <groupId>org.apache.flink</groupId>
